aplicativo de cartão de visita digital

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "raifran_social_networks",
+    "name": "Raifran Redes Sociais",
     "slug": "raifran_social_networks",
     "version": "1.0.0",
     "orientation": "portrait",
